# wg

./: .gitignore  .travis.yml  CMakeLists.txt  hello.cpp  readme.md  test.sh
01_hello-world/: CMakeLists.txt  main.cpp
02_sdl-dynamic/: CMakeLists.txt
02_sdl-static/: CMakeLists.txt  main.cpp
03_sdl-loop/: CMakeLists.txt  main.cpp
03_sdl-loop-engine/: CMakeLists.txt  engine.cpp  engine.h  game.cpp
03_sdl-loop-engine-dll/: CMakeLists.txt  engine.cpp  engine.h  game.cpp
04_opengl-mini/: CMakeLists.txt  engine.cpp  engine.h  game.cpp  vertexes.txt
05_texture_animation/: CMakeLists.txt  engine.cpp  engine.h  game.cpp  vertexes.txt
05_vertex-morphing/: CMakeLists.txt  engine.cpp  engine.h  game.cpp  picopng.cpp  vertexes.txt
